--- a/package.json
+++ b/package.json
@@ -66,6 +66,9 @@
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
   },
+  "resolutions": {
+    "websocket-extensions": "^0.1.4"
+  },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
