--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "resolutions": {
-    "websocket-extensions": "^0.1.4"
+    "websocket-extensions": "^0.1.4",
+    "fsevents": "2.1.3",
+    "chokidar": "3.4.0"
   },
   "scripts": {
     "start": "node scripts/start.js",
