--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "serveprod": "yarn build && docker-compose up -d && open http://localhost && docker-compose up"
   },
   "eslintConfig": {
     "extends": "react-app"
