--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "serveprod": "yarn build && docker-compose up -d && open http://localhost && docker-compose up"
+    "serveprod": "yarn build && docker-compose up"
   },
   "eslintConfig": {
     "extends": "react-app"
