--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@types/jest": "^24.0.0",
+    "@types/lodash": "^4.14.159",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -15,6 +16,7 @@
     "@types/redux-logger": "^3.0.8",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-bootstrap": "^1.2.2",
